# libccwrap

./: README  configure.ac
src/: Makefile.am  libccwrap.c  libccwrap.h
tests/: libccwrap_test.c
